--- a/war/Forum.css
+++ b/war/Forum.css
@@ -21,14 +21,18 @@ body {
 }
 
 .categoryTitle {
-	font-size: 125%;
-	color: #33ff00;
+	font-size: 150%;
+	font-weight: bold;
+	color: #5650d2;
 }
 
 .category {
+	font-size: 125%;
+	text-align: center;
 	border: 1px solid #000000;
-	background-color: #b0f963;
+	background-color: #f98383;
 }
+
 
 .forumTitle {
 	background-color: #ffff00;
